# Intelligent-Bike-Alarm

./: .gitignore  CMakeLists.txt  Makefile  ReadMe  ReadMe.md  controller_state.c  controller_state.h  main.c  rtos.c  rtos.h
drivers/: buzzer.c  mfrc522.c  mfrc522.h  mfrc522_helper.c  micros.c  mpu6050.c  mpu6050_helper.c  mpu6050_helper.h  sleep.c  timer.c  twi_master.c  uart.c
include/: activate_buzzer.h  bt_alert.h  buzzer.h  controller_state.h  mfrc522.h  mfrc522_helper.h  micros.h  motion_detect.h  mpu6050.h  mpu6050_helper.h  reg_options.h  rfid.h  rtos.h  sleep.h  sleep_check.h  timer.h  twi_master.h  uart.h
src/: controller_state.c  main.c  rtos.c
tasks/: activate_buzzer.c  bt_alert.c  calibrate_motion.c  motion_detect.c  rfid.c  sleep_check.c
test/: Makefile  test_blink.c
tests/: activate_buzzer_test.cpp  bt_alert_test.cpp  mock_buzzer.c  motion_detect_test.cpp  rfid_test.cpp  sleep_check_test.cpp  test_mocks.c  test_mocks.h
